# mkstemp.rs

./: Cargo.toml  README.md
doc/: search-index.js
doc/implementors/core/ops/: trait.Drop.js
doc/implementors/std/io/: trait.Read.js  trait.Write.js
doc/src/mkstemp/: lib.rs.html
src/: lib.rs
tests/: mkstemp.rs
